--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -11,6 +11,7 @@ Bootstrap Admin Template by EGrappler.com
 body {
 	background: #f9f6f1;
 	font: 13px/1.7em 'Open Sans';
+	
 }
     
 p { 
@@ -57,9 +58,17 @@ textarea {
 
 
 
-
-
-
+/*-----------------------------------------------------------------
+    contenue
+*/
+.contenue {
+	background-color: #FFF;
+    width: 870px;
+    display: block;
+    padding-left: 40px;
+    padding-right: 40px;
+    margin:0 auto ;
+}
 
 /*------------------------------------------------------------------
 [2. Navbar / .navbar]
@@ -1283,4 +1292,6 @@ color: #333;
 	}
 	
 }
+
+
 
