--- a/src/public/css/bootstrap.css
+++ b/src/public/css/bootstrap.css
@@ -1836,8 +1836,8 @@ fieldset[disabled] .btn-danger.active {
 
 .btn-success {
   color: #ffffff;
-  background-color: #5cb85c;
-  border-color: #5cb85c;
+  background-color: ##00BA8B;
+  border-color: ##00BA8B;
 }
 
 .btn-success:hover,
