--- a/src/public/css/pages/formateur.css
+++ b/src/public/css/pages/formateur.css
@@ -1,10 +1,24 @@
 @CHARSET "UTF-8";
 
 @import url(//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css);
+@import url(//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css);
 
 body {
     padding: 30px 0px 60px;
 }
+
+h2 {
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-size: 24px;
+    font-weight: bold;
+    height: 44px;
+}
+
+h4 {
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-weight: bold;
+}
+
 .panel > .list-group .list-group-item:first-child {
     /*border-top: 1px solid rgb(204, 204, 204);*/
 }
