--- a/src/public/css/pages/formateur.css
+++ b/src/public/css/pages/formateur.css
@@ -1,7 +1,6 @@
 @CHARSET "UTF-8";
 
 @import url(//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css);
-@import url(//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css);
 
 body {
     padding: 30px 0px 60px;
@@ -17,6 +16,10 @@ h2 {
 h4 {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	font-weight: bold;
+}
+
+#students_list {
+	display: none;
 }
 
 .panel > .list-group .list-group-item:first-child {
