--- a/src/public/css/pages/login.css
+++ b/src/public/css/pages/login.css
@@ -1,5 +1,5 @@
 body { 
-  background: url(http://lorempixel.com/1920/1920/city/9/) no-repeat center center fixed; 
+  background: url(http://www.ip-formation.com/images/fond_ecole.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
