--- a/src/public/css/pages/teacher_session.css
+++ b/src/public/css/pages/teacher_session.css
@@ -2,8 +2,11 @@
 
 @import url(//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css);
 
-body {
-    padding: 30px 0px 60px;
+/*body {
+    padding: 0px 0px 60px;
+}*/
+.navbar{
+	margin-bottom: 0px;
 }
 
 h2 {
@@ -25,6 +28,7 @@ h4 {
 .panel > .list-group .list-group-item:first-child {
     /*border-top: 1px solid rgb(204, 204, 204);*/
 }
+
 @media (max-width: 767px) {
     .visible-xs {
         display: inline-block !important;
@@ -35,11 +39,11 @@ h4 {
         height: 1px !important;
     }
 }
+
 #back-to-bootsnipp {
     position: fixed;
     top: 10px; right: 10px;
 }
-
 
 .c-search > .form-control {
    border-radius: 0px;
@@ -50,11 +54,13 @@ h4 {
    height: 44px;
    outline: none !important;
 }
+
 .c-search > .form-control:focus {
     outline:0px !important;
     -webkit-appearance:none;
     box-shadow: none;
 }
+
 .c-search > .input-group-btn .btn {
    border-radius: 0px;
    border-width: 0px;
@@ -63,17 +69,18 @@ h4 {
    height: 44px;
 }
 
-
 .c-list {
     padding: 0px;
     min-height: 44px;
 }
+
 .title {
     display: inline-block;
     font-size: 1.7em;
     font-weight: bold;
     padding: 5px 15px;
 }
+
 ul.c-controls {
     list-style: none;
     margin: 0px;
@@ -89,6 +96,7 @@ ul.c-controls li a {
     font-size: 1.7em;
     padding: 11px 10px 6px;   
 }
+
 ul.c-controls li a i {
     min-width: 24px;
     text-align: center;
